--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,10 @@ author :
   github : matheusrocha89
   twitter : matheusrocha
 
+# Setting pagination
+paginate: 5
+paginate_path: "page:num/"
+
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
 # Most places will/should use BASE_PATH to make the urls
