--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : Matheus Cruz Rocha - Personal blog
-tagline: Site Tagline
+title : Matheus Cruz Rocha
+tagline: Personal Blog
 author :
   name : Matheus Cruz Rocha
   email : matheus.rocha89@gmail.com
@@ -19,6 +19,9 @@ author :
 # Setting pagination
 paginate: 5
 paginate_path: "page:num/"
+
+# Timezone
+timezone: America/Bahia
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
